[FEAT] 생활관, 교직, 기숙사, 도서관 즐겨찾기 반환값 추가
이전에 코드 병합 과정에서 즐겨찾기 부분을 삭제하여 다시 추가